# pqcrypto.js

./: .gitignore  .gitmodules  Makefile  README.md  configure
lib/: nacl-sha512.js
lib/legacy/mcbits/: readme
lib/legacy/mcbits/m12_t62_simple/: api.h  benes.c  bm.c  decrypt.c  encrypt.c  encrypt.h  fft.c  fft_tr.c  gf.c  operations.c  params.h  pk_gen.c  sk_gen.c  sk_gen.h  transpose.c  util.c  vec.c
lib/legacy/mcbits/m13_t128_avx/: api.h  benes.c  benes.h  consts.s  decrypt.c  encrypt.c  encrypt.h  operations.c  pk_gen.c  sk_gen.c  transpose_64x128_sp_asm.s  update_asm.s  util.c  util.h  vec128_mul_asm.s  vec256_ama_asm.s  vec256_maa_asm.s  vec256_mul_asm.s
lib/legacy/mcbits/m13_t128_sse/: bm.c  decrypt.c  fft.c  fft.h  fft_tr.c  params.h  pk_gen.c  syndrome_asm.s  transpose.c  transpose.h  update_asm.s  util.c  util.h  vec128.c  vec128_mul_asm.s  vec_reduce_asm.s
lib/legacy/rlwe/: LatticeCrypto.h  LatticeCrypto_priv.h  License.txt  README.txt  kex.c  makefile  ntt_constants.c  random.c
lib/legacy/rlwe/AMD64/: consts.c  error_asm.S  ntt_x64.c  ntt_x64_asm.S
lib/legacy/rlwe/generic/: ntt.c
lib/legacy/rlwe/tests/: test_extras.c  test_extras.h  tests.c
lib/legacy/supercop/: MACROS  OPERATIONS  PROTOTYPES.c  data-do  data-do-biglittle  data-init  data-run  data-summarize  data-vars  do  do-part  measure-anything.c  try-anything.c  trygen.do  trygen.py
lib/legacy/supercop/crypto_kem/rqc256/ref/: CMakeLists.txt  api.h  ffi.h  ffi_elt.h  ffi_vec.cpp  gabidulin.h  parameters.h  parsing.cpp  parsing.h  rbc.h  rbc_elt.c  rbc_qre.c  rqc.cpp  rqc.h
(+12723 files in other folders)
